--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Hello World</title>
-</head>
-<body>
 
-    Hello {{.}}
 
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Histology Learning Platform</h1>
+            <p>
+                Something something
+            </p>
+
+        </div>
+    </div>
+
+{% endblock %}
