--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,72 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
-	<link href="{{ url_for('static', filename='favicon.ico')}}" rel="icon" />
-	<link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='favicon.ico')}}" rel="icon" />
+    <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/sidebar.css')}}" rel="stylesheet" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+    <link href="{{ url_for('static', filename='css/leaflet.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/leaflet.draw.css')}}" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sidebar.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/leaflet.draw.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/rastercoords.js')}}"></script>
 
 </head>
+
 <body>
 
-    <div id="wrapper">
-        <div class="overlay"></div>
+    {% block content %}{% endblock %}
 
-        <!-- Sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
-            <ul class="nav sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                       Bootstrap 3
-                    </a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-fw fa-folder"></i> Page one</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-fw fa-file-o"></i> Second page</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-fw fa-cog"></i> Third page</a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-            </ul>
-        </nav>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-          <button type="button" class="hamburger is-closed animated fadeInLeft" data-toggle="offcanvas">
-            <span class="hamb-top"></span>
-            <span class="hamb-middle"></span>
-            <span class="hamb-bottom"></span>
-          </button>
-            <div class="container">
-                <div class="row">
-                    {% block content %}{% endblock %}
-                </div>
-            </div>
-        </div>
-        <!-- /#page-content-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
 </body>
 </html>
