--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,8 @@
 
 {% extends "layout.html" %}
 {% block content %}
-    <!-- <div class="jumbotron">
-        <div class="container">
-            <h1>Histology Learning Platform</h1>
-        </div>
-    </div> -->
 
-    <div id="map" style="height: 100%;"></div>
-
+    <div id="map" class="map" style="height: 100%;"></div>
 
     <script src="{{ url_for('static', filename='js/map.js')}}"></script>
 
