--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
     <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
     <script src="{{ url_for('static', filename='js/leaflet.draw.js')}}"></script>
     <script src="{{ url_for('static', filename='js/rastercoords.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/leaflet.freedraw.js')}}"></script>
 
 </head>
 
