--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -97,19 +97,19 @@ html { height: 100%;}
     background-color: #1a1a1a;
 }
 .sidebar-nav li:nth-child(2):before {
-    background-color: #00368E;
+    background-color: #ec1b5a;
 }
 .sidebar-nav li:nth-child(3):before {
-    background-color: #003995;
+    background-color: #79aefe;
 }
 .sidebar-nav li:nth-child(4):before {
-    background-color: #0040A7;
+    background-color: #314190;
 }
 .sidebar-nav li:nth-child(5):before {
-    background-color: #0145B2;
+    background-color: #279636;
 }
 .sidebar-nav li:nth-child(6):before {
-    background-color: #004DCA;
+    background-color: #7d5d81;
 }
 .sidebar-nav li:nth-child(7):before {
     background-color: #ead24c;
