--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+body {
+    position: relative;
+    overflow-x: hidden;
+}
+body,
+html { height: 100%;}
 
 .jumbotron {
     margin-bottom: 0;
@@ -32,8 +38,8 @@
 }
 
 .map {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .map.mode-create {
