--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,18 +10,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='favicon.ico')}}" rel="icon" />
     <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/leaflet.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/easy-button.css')}}" rel="stylesheet" />
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/leaflet-deepzoom.js')}}"></script>
     <script src="{{ url_for('static', filename='js/rastercoords.js')}}"></script>
     <script src="{{ url_for('static', filename='js/leaflet.freedraw.js')}}"></script>
+    <script src="https://unpkg.com/leaflet-easybutton@2.0.0/src/easy-button.js"></script>
 
 </head>
-
 <body>
 
     {% block content %}{% endblock %}
