--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,22 +13,60 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='favicon.ico')}}" rel="icon" />
     <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='css/leaflet.css')}}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/easy-button.css')}}" rel="stylesheet" />
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-    <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/leaflet-deepzoom.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/rastercoords.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/leaflet.freedraw.js')}}"></script>
-    <script src="https://unpkg.com/leaflet-easybutton@2.0.0/src/easy-button.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/openseadragon.min.js') }}"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.dropdown-toggle').dropdown();
+        });
+    </script>
 
 </head>
 <body>
+    
+    <div class="container-fluid">
+        <div class="navbar">
+        <nav class="navbar navbar-fixed">
+        
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">
+                    <img src="/static/images/logo.png" width="30" height="30" />
+                </a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Snittbilder <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    {% for img in images %}
+                        <li><a href="/image?slug={{ img }}">{{ img }}</a></li>
+                    {% endfor %}
+                </ul>
+                </li>
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Caser<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    {% for img in images %}
+                        <li><a href="/case?slug={{ img }}">{{ img }}</a></li>
+                    {% endfor %}
+                </ul>
+                </li>
+            </ul>
+            </div><!-- /.navbar-collapse -->
+        </nav>
+        </div>
+        <div class="body">
     {% block content %}{% endblock %}
-
+    </div>
+    </div>
 </body>
 </html>
