--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,13 +14,16 @@
     <link href="{{ url_for('static', filename='favicon.ico')}}" rel="icon" />
     <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/easy-button.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/one-page-wonder.css')}}" rel="stylesheet" />
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script src="{{ url_for('static', filename='js/openseadragon.min.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='js/openseadragon-annotations.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/paper-full.min.js') }}"></script>
+    
     <script>
         $(document).ready(function () {
             $('.dropdown-toggle').dropdown();
@@ -30,40 +33,40 @@
 </head>
 <body>
     
-    <div class="container-fluid">
-        <div class="navbar">
+    <div class="navbar">
         <nav class="navbar navbar-fixed">
-        
+            
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">
-                    <img src="/static/images/logo.png" width="30" height="30" />
+                    <img src="/static/images/logo.png" />
                 </a>
             </div>
-
+    
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Snittbilder <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    {% for img in images %}
-                        <li><a href="/image?slug={{ img }}">{{ img }}</a></li>
-                    {% endfor %}
-                </ul>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Snittbilder <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {% for img in images %}
+                            <li><a href="/image?slug={{ img }}">{{ img }}</a></li>
+                        {% endfor %}
+                    </ul>
                 </li>
                 <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Caser<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    {% for img in images %}
-                        <li><a href="/case?slug={{ img }}">{{ img }}</a></li>
-                    {% endfor %}
-                </ul>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Caser<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {% for img in images %}
+                            <li><a href="/case?slug={{ img }}">{{ img }}</a></li>
+                        {% endfor %}
+                    </ul>
                 </li>
             </ul>
-            </nav>
-        </div>
-        <div class="body">
-    {% block content %}{% endblock %}
+        </nav>
     </div>
+
+    <div style="padding-top: 55px; height:100%">
+        {% block content %}{% endblock %}
     </div>
+    
 </body>
 </html>
