Added support for png overlays of cell annotations.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
     <script src="{{ url_for('static', filename='js/openseadragon.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/openseadragon-annotations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/openseadragonselection.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/openseadragon-canvas-overlay.js') }}"></script>
     <script src="{{ url_for('static', filename='js/paper-full.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/osd_viewer.js') }}"></script>
     
