--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,18 @@
 {% block content %}
 
     <h1 style="margin-left:30px;">Snitt</h1>
+    <div class="row" style="width: 100%;">
     {% for img in images %}
-    <div class="card col-md-2" style="width: 50%; margin-left: 30px;">
-        <a href="/image?slug={{ img }}">
-        <img class="card-img-top" src="/map?slug={{ img }}&thumbnail=True" alt="Card image cap" style="width: 200px;">
-        </a>
-        <div class="card-block">
-            <h4 class="card-title">{{ img }}</h4>
-            <p class="card-text"></p>
+        <div class="col-lg-8">
+            <div class="thumbnail" style="height: 20%; width: 50%">
+                <a href="/image?slug={{ img }}">
+                    <img class="card-img-top" src="/map?slug={{ img }}&thumbnail=True" style="width:100%; height:inherit;" >
+                    <div class="caption">
+                        <p>{{ img }}</p>
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
     {% endfor %}
+    </div>
 {% endblock %}
