--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
 <body>
     
     <div class="navbar">
-        <nav class="navbar navbar-fixed">
+        <nav class="navbar navbar-light bg-light">
             
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
