--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
 
     <h1 style="margin-left:30px;">Snitt</h1>
     <div class="row" style="width: 100%;">
-    {% for img in images %}
+    {% for img in files %}
         <div class="col-lg-8">
             <div class="thumbnail" style="height: 20%; width: 50%">
-                <a href="/image?slug={{ img }}">
-                    <img class="card-img-top" src="/map?slug={{ img }}&thumbnail=True" style="width:100%; height:inherit;" >
+                <a href="/slide/{{ img }}">
+                    <img class="card-img-top" src="/thumbnail/{{ img }}" style="width:100%; height:inherit;" >
                     <div class="caption">
                         <p>{{ img }}</p>
                     </div>
