Added back endpoint for annotation. Added annotation.js, which contains the overlay code.

--- a/templates/slide.html
+++ b/templates/slide.html
@@ -35,6 +35,12 @@ $(document).ready(function() {
         // from DZI XML.
         viewer.source.minLevel = 8;
     });
+    viewer.selection({
+        allowRotation: false,
+        onSelection: function(rect) {
+            onSelectionConfirmed(viewer, rect)
+        }
+    });
 });
 </script>
     
