--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,9 +19,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/openseadragon.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/openseadragon.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/openseadragon-annotations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/openseadragonselection.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/annotation.js') }}"></script>
     
