--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,4 @@
 
-
-
 {% extends "layout.html" %}
 {% block content %}
 
@@ -42,4 +40,7 @@
         </div>
     {% endfor %}
     </div>
+
+    {% include 'cellinfo.html' %}
+
 {% endblock %}
