--- a/templates/slide.html
+++ b/templates/slide.html
@@ -3,36 +3,11 @@
 {% block content %}
 
 <script src="{{ url_for('static', filename='js/annotation.js') }}"></script>
+<script src="{{ url_for('static', filename='js/osd_viewer.js') }}"></script>
 <div id="view" class="map" style="width: 100%; min-width:100%;"></div>
 
 <script type="text/javascript">
-$(document).ready(function() {
-    var viewer = new OpenSeadragon({
-        id: "view",
-        tileSources: "{{ slide_url }}",
-        prefixUrl: "{{ url_for('static', filename='images/') }}",
-        showNavigator: true,
-        showRotationControl: false,
-        animationTime: 0.5,
-        blendTime: 0.1,
-        timeout: 12000,
-    });
-    viewer.addHandler("open", function() {
-        // To improve load times, ignore the lowest-resolution Deep Zoom
-        // levels.  This is a hack: we can't configure the minLevel via
-        // OpenSeadragon configuration options when the viewer is created
-        // from DZI XML.
-        viewer.source.minLevel = 8;
-    });
-    viewer.selection({
-        allowRotation: false,
-        onSelection: function(rect) {
-            onSelectionConfirmed(viewer, rect)
-        }
-    });
-
-    viewer.overlay_list = [];
-});
+    $(document).ready(osd_init("{{ slide_url }}", "{{ url_for('static', filename='images/') }}"));
 </script>
 
 
