Small updates, need to fix overlay scaling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -373,6 +373,15 @@ html { height: 100%;}
 /*            Overlay            */
 /*-------------------------------*/
 
+.div-overlay {
+    position: fixed;
+}
+
+.div-overlay > img {
+  position: inherit;
+}
+
+
 .overlay {
     position: fixed;
     display: none;
