--- a/static/css/style.css
+++ b/static/css/style.css
@@ -375,10 +375,12 @@ html { height: 100%;}
 
 .div-overlay {
     position: fixed;
+    border: 3px dashed green
 }
 
 .div-overlay > img {
-  position: inherit;
+  width: 100%;
+  height: 100%;
 }
 
 
