--- a/templates/cellinfo.html
+++ b/templates/cellinfo.html
@@ -3,7 +3,7 @@
 <div class="col-lg-8">
     <ul>
         {% for model in models %}
-        <li > {{ model }} :  </li>
+        <li > {{ model }} </li>
         {% endfor %}
     </ul>
 </div>
