--- a/static/css/style.css
+++ b/static/css/style.css
@@ -373,6 +373,8 @@ html { height: 100%;}
 /*            Overlay            */
 /*-------------------------------*/
 
+
+
 .div-overlay {
     position: fixed;
     border: 3px dashed green
@@ -383,6 +385,15 @@ html { height: 100%;}
   height: 100%;
 }
 
+.div-infobox {
+  visibility: hidden;
+  width: fit-content;
+  height: fit-content;
+  background-color: darkslategrey;
+  opacity: 0.7;
+  font-size: large;
+  color: white;
+}
 
 .overlay {
     position: fixed;
